--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,26 @@
 spring:
-    datasource:
-        url: jdbc:mysql://localhost:3306/thevergov_db
-        username: ${DB_USERNAME}
-        password: ${DB_PASSWORD}
-    jpa:
-        hibernate:
-            ddl-auto: update
-        show-sql: true
-        properties:
-            hibernate:
-                dialect: org.hibernate.dialect.MySQL8Dialect
+  datasource:
+    url: jdbc:mysql://localhost:3306/thevergov_db
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+
+  liquibase:
+    enabled: true
+    change-log: classpath:db/changelog-master.xml
+
+springdoc:
+  api-docs:
+    path: /authentication-docs
+  swagger-ui:
+    path: /authentication-docs/swagger-ui-custom.html
+
+logging.level:
+  root: INFO
+  liquibase: INFO
