--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <version>3.2.2</version>
         </dependency>
 
         <dependency>
@@ -143,7 +144,6 @@
             <artifactId>maven-shade-plugin</artifactId>
             <version>3.5.0</version>
         </dependency>
-
 
     </dependencies>
 
