--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -15,3 +15,7 @@ EMAIL_PORT: 587
 EMAIL_ID: vergovmiroslav@gmail.com
 EMAIL_PASSWORD:
 VERIFY_EMAIL_HOST: http://localhost:8080
+
+
+JWT_EXPIRATION: 432_000_000
+JWT_SECRET: ${SECRET}
