--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -15,3 +15,8 @@ EMAIL_PORT: 587
 EMAIL_ID:
 EMAIL_PASSWORD:
 VERIFY_EMAIL_HOST: http://localhost:8080
+
+
+
+JWT_EXPIRATION: 432_000_000
+JWT_SECRET: ${SECRET}
