--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -64,6 +64,11 @@ server:
     whitelabel:
       enabled: false
 
+
+jwt:
+  expiration: ${JWT_EXPIRATION}
+  secret: ${JWT_SECRET}
+
 # liquibase:
 #   enabled: true
 #   change-log: classpath:db/changelog-master.xml
