--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,6 +1,6 @@
 #Database
-DB_USERNAME: root
-DB_PASSWORD: 1234
+DB_USERNAME:
+DB_PASSWORD:
 MYSQL_HOST: localhost
 MYSQL_PORT: 3306
 MYSQL_DATABASE: thevergov_db
