--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,9 +1,9 @@
 #Database
-DB_USERNAME:
-DB_PASSWORD:
-MYSQL_HOST: localhost
-MYSQL_PORT: 3306
-MYSQL_DATABASE: thevergov_db
+DB_USERNAME: ${DB_USERNAME}
+DB_PASSWORD: ${DB_PASSWORD}
+MYSQL_HOST: ${MYSQL_HOST}
+MYSQL_PORT: ${MYSQL_PORT}
+MYSQL_DATABASE: ${MYSQL_DATABASE}
 
 #Server
 CONTAINER_PORT: 8080
@@ -12,8 +12,8 @@ ACTIVE_PROFILE: dev
 #Email Config
 EMAIL_HOST: smtp.gmail.com
 EMAIL_PORT: 587
-EMAIL_ID:
-EMAIL_PASSWORD:
+EMAIL_ID: ${EMAIL_ID}
+EMAIL_PASSWORD: ${EMAIL_PASSWORD}
 VERIFY_EMAIL_HOST: http://localhost:5173
 
 
