Migrate to containerized PostgreSQL with Docker

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,21 +1,20 @@
 #Database
-DB_USERNAME: ${DB_USERNAME}
-DB_PASSWORD: ${DB_PASSWORD}
-MYSQL_HOST: ${MYSQL_HOST}
-MYSQL_PORT: ${MYSQL_PORT}
-MYSQL_DATABASE: ${MYSQL_DATABASE}
+POSTGRESQL_USERNAME: ${DB_USERNAME}
+POSTGRESQL_PASSWORD: ${DB_PASSWORD}
+POSTGRESQL_HOST: 192.168.1.209
+POSTGRESQL_PORT: 5432
+POSTGRESQL_DATABASE: vergovdatabase
 
 #Server
-CONTAINER_PORT: 8080
+CONTAINER_PORT: 8085
 ACTIVE_PROFILE: dev
 
 #Email Config
 EMAIL_HOST: smtp.gmail.com
 EMAIL_PORT: 587
-EMAIL_ID: ${EMAIL_ID}
-EMAIL_PASSWORD: ${EMAIL_PASSWORD}
-VERIFY_EMAIL_HOST: http://localhost:5173
-
+EMAIL_ID: ${EMAIL_ADDRESS}
+EMAIL_PASSWORD: ${EMAIL_PASS}
+VERIFY_EMAIL_HOST: http://localhost:8085
 
 JWT_EXPIRATION: 432_000_000
 JWT_SECRET: ${SECRET}
