--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,12 +1,12 @@
 #Database
-DB_USERNAME:
-DB_PASSWORD:
-MYSQL_HOST: localhost
-MYSQL_PORT: 3306
-MYSQL_DATABASE: thevergov_db
+POSTGRESQL_USERNAME:
+POSTGRESQL_PASSWORD:
+POSTGRESQL_HOST:
+POSTGRESQL_PORT:
+POSTGRESQL_DATABASE:
 
 #Server
-CONTAINER_PORT: 8080
+CONTAINER_PORT: 8085
 ACTIVE_PROFILE: prod
 
 #Email Config
@@ -14,9 +14,7 @@ EMAIL_HOST: smtp.gmail.com
 EMAIL_PORT: 587
 EMAIL_ID:
 EMAIL_PASSWORD:
-VERIFY_EMAIL_HOST: http://localhost:8080
-
-
+VERIFY_EMAIL_HOST: http://localhost:8085
 
 JWT_EXPIRATION: 432_000_000
 JWT_SECRET: ${SECRET}
