--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,26 +11,24 @@ spring:
     deserialization:
       fail-on-unknown-properties: false
   datasource:
-    url: jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}?createDatabaseIfNotExist=true
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:postgresql://${POSTGRESQL_HOST}:${POSTGRESQL_PORT}/${POSTGRESQL_DATABASE}
+    username: ${POSTGRESQL_USERNAME}
+    password: ${POSTGRESQL_PASSWORD}
   jpa:
     open-in-view: false
-    database-platform: org.hibernate.dialect.MySQL8Dialect
+    database-platform: org.hibernate.dialect.PosgreSQLInnoDBDialect
     generate-ddl: true
     show-sql: true
     hibernate:
       ddl-auto: update
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+        globally_quoted_identifiers: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
   sql:
     init:
-      mode: always
+      mode: never
       continue-on-error: false
       schema-locations: classpath:/data/schema.sql
       data-locations: classpath:/data/data.sql
@@ -66,21 +64,6 @@ server:
     whitelabel:
       enabled: false
 
-
 jwt:
   expiration: ${JWT_EXPIRATION}
   secret: ${JWT_SECRET}
-
-# liquibase:
-#   enabled: true
-#   change-log: classpath:db/changelog-master.xml
-
-#springdoc:
-#  api-docs:
-#    path: /authentication-docs
-#  swagger-ui:
-#    path: /authentication-docs/swagger-ui-custom.html
-
-#logging.level:
-#  root: INFO
-#  liquibase: INFO
