--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 #Database
 POSTGRESQL_USERNAME: ${DB_USERNAME}
 POSTGRESQL_PASSWORD: ${DB_PASSWORD}
-POSTGRESQL_HOST: 192.168.1.209
+POSTGRESQL_HOST: localhost
 POSTGRESQL_PORT: 5432
 POSTGRESQL_DATABASE: vergovdatabase
 
